bug 462908 - Follow up to fix indentation and include patch in gfx/cairo
UltraBlame original commit: 027a7966d5f0db026f1570b64473d6242d99f039

--- a/gfx/cairo/README
+++ b/gfx/cairo/README
@@ -319,6 +319,29 @@ FT_Faces
 created
 by
 cairo
+wince
+-
+fontconfig
+.
+patch
+:
+bug
+462908
+;
+fixes
+required
+to
+compile
+for
+windows
+ce
+.
+Also
+allows
+for
+building
+without
+fontconfig
 =
 =
 =
