--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -30,6 +30,20 @@ file
 to
 download
 it
+droponnewtabbutton
+=
+Drop
+a
+link
+or
+file
+to
+open
+it
+in
+a
+new
+tab
 droponnewwindowbutton
 =
 Drop
