--- a/gfx/cairo/README
+++ b/gfx/cairo/README
@@ -342,6 +342,37 @@ for
 building
 without
 fontconfig
+gfx
+/
+cairo
+/
+glyph
+-
+safety
+-
+margin
+.
+patch
+:
+Change
+the
+glyph
+dropping
+safety
+margin
+from
+2em
+to
+10em
+for
+bug
+460023
+.
+Upstream
+commit
+:
+28a72648ba7abe02ebd4df7234424e333b85dc9c
+.
 =
 =
 =
