Bug 454098. Fix signs for baseline offsets for glyphs on Windows. r+sr=roc
UltraBlame original commit: a6690fa2baba68d4accbbc3a36779c7dc145c398

--- a/gfx/cairo/README
+++ b/gfx/cairo/README
@@ -342,10 +342,6 @@ for
 building
 without
 fontconfig
-gfx
-/
-cairo
-/
 glyph
 -
 safety
@@ -373,6 +369,35 @@ commit
 :
 28a72648ba7abe02ebd4df7234424e333b85dc9c
 .
+win32
+-
+vertically
+-
+offset
+-
+glyph
+.
+patch
+:
+bug
+454098
+;
+vertical
+positioning
+errors
+when
+drawing
+glyph
+runs
+including
+delta
+-
+y
+offsets
+on
+screen
+via
+GDI
 =
 =
 =
