Bug 475092. Fix incorrect positioning on Windows when glyph run includes vertically-offset glyphs is drawn to canvas. r=vlad
UltraBlame original commit: 360b4a2d0aa8fa46670fd304276cfab140bbdabf

--- a/gfx/cairo/README
+++ b/gfx/cairo/README
@@ -398,6 +398,37 @@ on
 screen
 via
 GDI
+win32
+-
+canvas
+-
+glyph
+-
+position
+.
+patch
+:
+bug
+475092
+;
+horizontal
+positioning
+errors
+when
+drawing
+glyph
+runs
+with
+delta
+-
+y
+offsets
+to
+canvas
+through
+win32
+-
+font
 =
 =
 =
