Bug 445087. Add extra pixel on each side of the glyph's black box returned by GetGlyphOutlineW, to avoid clipping ClearType pixels. r=vlad
UltraBlame original commit: d679ac3a8de0c6de7339056d80c7d0470b7c0a95

--- a/gfx/cairo/README
+++ b/gfx/cairo/README
@@ -398,6 +398,36 @@ on
 screen
 via
 GDI
+win32
+-
+cleartype
+-
+clipping
+.
+patch
+:
+bug
+445087
+;
+some
+glyphs
+are
+clipped
+mainly
+on
+right
+-
+hand
+edge
+when
+ClearType
+is
+enabled
+and
+drawing
+to
+RGBA
+canvas
 =
 =
 =
