Add bug 474886 to cairo README
UltraBlame original commit: db5bba11c8a4f718bcf70d73ec4009315f7139fe

--- a/gfx/cairo/README
+++ b/gfx/cairo/README
@@ -398,6 +398,24 @@ on
 screen
 via
 GDI
+ignore
+-
+rank0
+.
+patch
+:
+bug
+474886
+;
+Not
+redrawing
+the
+background
+when
+changing
+page
+on
+flickr
 =
 =
 =
