--- a/gfx/cairo/README
+++ b/gfx/cairo/README
@@ -416,6 +416,37 @@ changing
 page
 on
 flickr
+win32
+-
+canvas
+-
+glyph
+-
+position
+.
+patch
+:
+bug
+475092
+;
+horizontal
+positioning
+errors
+when
+drawing
+glyph
+runs
+with
+delta
+-
+y
+offsets
+to
+canvas
+through
+win32
+-
+font
 =
 =
 =
