--- a/layout/reftests/fonts/README
+++ b/layout/reftests/fonts/README
@@ -186,3 +186,149 @@ specific
 restrictions
 )
 .
+PositioningTest1
+.
+ttf
+PositioningTest2
+.
+ttf
+These
+fonts
+were
+generated
+with
+FontForge
+and
+then
+OpenType
+tables
+added
+with
+MS
+VOLT
+.
+The
+glyphs
+are
+from
+Charis
+SIL
+(
+see
+http
+:
+/
+/
+scripts
+.
+sil
+.
+org
+/
+CharisSILFont
+)
+released
+under
+the
+Open
+Font
+License
+.
+In
+both
+fonts
+the
+lowercase
+'
+o
+'
+glyph
+should
+appear
+raised
+when
+rendered
+.
+Font
+1
+uses
+a
+GPOS
+positioning
+rule
+to
+achieve
+this
+so
+it
+tests
+whether
+vertical
+deltas
+are
+being
+handled
+correctly
+.
+Font
+2
+uses
+a
+GSUB
+substitution
+to
+replace
+the
+'
+o
+'
+with
+a
+glyph
+that
+has
+already
+been
+offset
+within
+the
+em
+-
+square
+so
+no
+vertical
+delta
+is
+involved
+.
+Finally
+the
+capital
+'
+O
+'
+character
+maps
+directly
+to
+the
+shifted
+'
+o
+'
+glyph
+so
+this
+can
+be
+used
+for
+comparison
+without
+requiring
+any
+OpenType
+layout
+support
+.
