Bug 473815 - Improve diagnostics for malformed font-face rules; r+sr=dbaron
UltraBlame original commit: 692c543f7b554e062cb00e35bfdef231f6c92259

--- a/dom/locales/en-US/chrome/layout/css.properties
+++ b/dom/locales/en-US/chrome/layout/css.properties
@@ -1656,3 +1656,43 @@ for
 media
 feature
 .
+PEBadFontBlockStart
+=
+Expected
+'
+{
+'
+to
+begin
+font
+-
+face
+rule
+but
+found
+'
+%
+1
+S
+'
+.
+PEBadFontBlockEnd
+=
+Expected
+'
+}
+'
+to
+end
+font
+-
+face
+rule
+but
+found
+'
+%
+1
+S
+'
+.
