Bug 1342747 - [be] Search engine setup for Firefox for Belarusian, r=mkaply
MozReview-Commit-ID: 7wpEiSpnK9g

UltraBlame original commit: eb8f83fd7a7cffd77f49d4767b428e5674fb5cf5

--- a/browser/locales/search/list.json
+++ b/browser/locales/search/list.json
@@ -538,6 +538,47 @@ az
 }
 }
 "
+be
+"
+:
+{
+"
+default
+"
+:
+{
+"
+visibleDefaultEngines
+"
+:
+[
+"
+yandex
+-
+by
+"
+"
+google
+"
+"
+ddg
+"
+"
+wikipedia
+-
+be
+"
+"
+wikipedia
+-
+be
+-
+tarask
+"
+]
+}
+}
+"
 bg
 "
 :
