Backed out 2 changesets (bug 1338567) for near permafailing debugger test failures a=backout CLOSED TREE
Backed out changeset c594a1353f5d (bug 1338567)
Backed out changeset e9dcba1a87af (bug 1338567)

MozReview-Commit-ID: 4vB5haf8zyB

UltraBlame original commit: df4752809a835a6c7a0dc7dd0d8f903688b1c9db

--- a/devtools/client/locales/en-US/debugger.properties
+++ b/devtools/client/locales/en-US/debugger.properties
@@ -176,68 +176,6 @@ panes
 LOCALIZATION
 NOTE
 (
-copySourceUrl
-)
-:
-This
-is
-the
-text
-that
-appears
-in
-the
-#
-context
-menu
-to
-copy
-the
-source
-URL
-of
-file
-open
-.
-copySourceUrl
-=
-Copy
-Source
-Url
-#
-LOCALIZATION
-NOTE
-(
-copySourceUrl
-.
-accesskey
-)
-:
-Access
-key
-to
-copy
-the
-source
-URL
-of
-a
-file
-from
-#
-the
-context
-menu
-.
-copySourceUrl
-.
-accesskey
-=
-u
-#
-LOCALIZATION
-NOTE
-(
 expandPanes
 )
 :
@@ -933,43 +871,6 @@ P
 LOCALIZATION
 NOTE
 (
-sources
-.
-searchAlt
-.
-key
-)
-:
-Alternate
-key
-shortcut
-to
-open
-#
-the
-search
-for
-searching
-all
-the
-source
-files
-the
-debugger
-has
-seen
-.
-sources
-.
-searchAlt
-.
-key
-=
-O
-#
-LOCALIZATION
-NOTE
-(
 sourceSearch
 .
 search
@@ -1050,7 +951,7 @@ NOTE
 (
 sourceSearch
 .
-resultsSummary1
+resultsSummary
 )
 :
 Shows
@@ -1066,11 +967,14 @@ for
 autocomplete
 sourceSearch
 .
-resultsSummary1
+resultsSummary
 =
 %
 d
-results
+instances
+of
+%
+S
 #
 LOCALIZATION
 NOTE
@@ -2036,37 +1940,6 @@ NOTE
 (
 editor
 .
-conditionalPanel
-.
-placeholder
-)
-:
-Tooltip
-text
-for
-#
-close
-button
-inside
-ConditionalPanel
-component
-editor
-.
-conditionalPanel
-.
-close
-=
-Cancel
-edit
-breakpoint
-and
-close
-#
-LOCALIZATION
-NOTE
-(
-editor
-.
 jumpToMappedLocation1
 )
 :
@@ -2187,41 +2060,6 @@ NOTE
 (
 sourceTabs
 .
-closeTab
-.
-accesskey
-)
-:
-Access
-key
-to
-close
-the
-currently
-select
-#
-source
-tab
-from
-the
-editor
-context
-menu
-item
-.
-sourceTabs
-.
-closeTab
-.
-accesskey
-=
-c
-#
-LOCALIZATION
-NOTE
-(
-sourceTabs
-.
 closeOtherTabs
 )
 :
@@ -2250,39 +2088,7 @@ NOTE
 (
 sourceTabs
 .
-closeOtherTabs
-.
-accesskey
-)
-:
-Access
-key
-to
-close
-other
-source
-tabs
-#
-from
-the
-editor
-context
-menu
-.
-sourceTabs
-.
-closeOtherTabs
-.
-accesskey
-=
-o
-#
-LOCALIZATION
-NOTE
-(
-sourceTabs
-.
-closeTabsToEnd
+closeTabsToRight
 )
 :
 Editor
@@ -2298,14 +2104,7 @@ the
 tabs
 to
 the
-end
-(
-the
 right
-for
-LTR
-languages
-)
 of
 the
 selected
@@ -2313,48 +2112,13 @@ tab
 .
 sourceTabs
 .
-closeTabsToEnd
+closeTabsToRight
 =
 Close
 tabs
 to
 the
 right
-#
-LOCALIZATION
-NOTE
-(
-sourceTabs
-.
-closeTabsToEnd
-.
-accesskey
-)
-:
-Access
-key
-to
-close
-source
-tabs
-#
-after
-the
-selected
-tab
-from
-the
-editor
-context
-menu
-.
-sourceTabs
-.
-closeTabsToEnd
-.
-accesskey
-=
-e
 #
 LOCALIZATION
 NOTE
@@ -2383,221 +2147,6 @@ closeAllTabs
 Close
 all
 tabs
-#
-LOCALIZATION
-NOTE
-(
-sourceTabs
-.
-closeAllTabs
-.
-accesskey
-)
-:
-Access
-key
-to
-close
-all
-tabs
-from
-the
-#
-editor
-context
-menu
-.
-sourceTabs
-.
-closeAllTabs
-.
-accesskey
-=
-a
-#
-LOCALIZATION
-NOTE
-(
-sourceTabs
-.
-revealInTree
-)
-:
-Editor
-source
-tab
-context
-menu
-item
-#
-for
-revealing
-source
-in
-tree
-.
-sourceTabs
-.
-revealInTree
-=
-Reveal
-in
-Tree
-#
-LOCALIZATION
-NOTE
-(
-sourceTabs
-.
-revealInTree
-.
-accesskey
-)
-:
-Access
-key
-to
-reveal
-a
-source
-in
-the
-#
-tree
-from
-the
-context
-menu
-.
-sourceTabs
-.
-revealInTree
-.
-accesskey
-=
-r
-#
-LOCALIZATION
-NOTE
-(
-sourceTabs
-.
-copyLink
-)
-:
-Editor
-source
-tab
-context
-menu
-item
-#
-for
-copying
-a
-link
-address
-.
-sourceTabs
-.
-copyLink
-=
-Copy
-Link
-Address
-#
-LOCALIZATION
-NOTE
-(
-sourceTabs
-.
-copyLink
-.
-accesskey
-)
-:
-Access
-key
-to
-copy
-a
-link
-addresss
-from
-the
-#
-editor
-context
-menu
-.
-sourceTabs
-.
-copyLink
-.
-accesskey
-=
-l
-#
-LOCALIZATION
-NOTE
-(
-sourceTabs
-.
-prettyPrint
-)
-:
-Editor
-source
-tab
-context
-menu
-item
-#
-for
-pretty
-printing
-the
-source
-.
-sourceTabs
-.
-prettyPrint
-=
-Pretty
-Print
-Source
-#
-LOCALIZATION
-NOTE
-(
-sourceTabs
-.
-prettyPrint
-.
-accesskey
-)
-:
-Access
-key
-to
-pretty
-print
-a
-source
-from
-#
-the
-editor
-context
-menu
-.
-sourceTabs
-.
-prettyPrint
-.
-accesskey
-=
-p
 #
 LOCALIZATION
 NOTE
@@ -4030,21 +3579,6 @@ available
 .
 functionSearchSeparatorLabel
 =
-functionSearch
-.
-search
-.
-placeholder
-=
-Search
-Functions
-functionSearch
-.
-search
-.
-key
-=
-O
 #
 LOCALIZATION
 NOTE
