Bug 1343432 - Update jemalloc 4 to version 4.5.0. r=glandium
UltraBlame original commit: 24bea8bde57dcc65ff50b0f349134231372a9091

--- a/memory/jemalloc/src/INSTALL
+++ b/memory/jemalloc/src/INSTALL
@@ -1243,6 +1243,61 @@ details
 -
 disable
 -
+thp
+Disable
+transparent
+huge
+page
+(
+THP
+)
+integration
+.
+On
+systems
+with
+THP
+support
+THPs
+are
+explicitly
+disabled
+as
+a
+side
+effect
+of
+unused
+dirty
+page
+purging
+for
+chunks
+that
+back
+small
+and
+/
+or
+large
+allocations
+because
+such
+chunks
+typically
+comprise
+active
+unused
+dirty
+and
+untouched
+clean
+pages
+.
+-
+-
+disable
+-
 munmap
 Disable
 virtual
@@ -2651,29 +2706,46 @@ these
 flags
 to
 the
+C
 compiler
 .
-You
-probably
-shouldn
-'
-t
-define
-this
-unless
-you
-know
-what
-you
+Any
+flags
+set
+by
+the
+configure
+script
 are
-doing
+prepended
+which
+means
+explicitly
+set
+flags
+generally
+take
+precedence
 .
-(
-Use
-EXTRA_CFLAGS
-instead
+Take
+care
+when
+specifying
+flags
+such
+as
+-
+Werror
+because
+configure
+tests
+may
+be
+affected
+in
+undesirable
+ways
 .
-)
 EXTRA_CFLAGS
 =
 "
@@ -2684,6 +2756,14 @@ these
 flags
 to
 CFLAGS
+without
+passing
+them
+to
+the
+compiler
+during
+configuration
 .
 This
 makes
@@ -2712,41 +2792,6 @@ for
 the
 specified
 configuration
-.
-The
-configure
-script
-specifically
-checks
-whether
-an
-optimization
-flag
-(
--
-O
-*
-)
-is
-specified
-in
-EXTRA_CFLAGS
-and
-refrains
-from
-specifying
-an
-optimization
-level
-if
-it
-finds
-that
-one
-has
-already
-been
-specified
 .
 CPPFLAGS
 =
