Backed out changeset 24bea8bde57d (bug 1343432) for build bustage
UltraBlame original commit: 49e60602adda18b97768cd45c11f22a9bdadde24

--- a/memory/jemalloc/src/INSTALL
+++ b/memory/jemalloc/src/INSTALL
@@ -1243,61 +1243,6 @@ details
 -
 disable
 -
-thp
-Disable
-transparent
-huge
-page
-(
-THP
-)
-integration
-.
-On
-systems
-with
-THP
-support
-THPs
-are
-explicitly
-disabled
-as
-a
-side
-effect
-of
-unused
-dirty
-page
-purging
-for
-chunks
-that
-back
-small
-and
-/
-or
-large
-allocations
-because
-such
-chunks
-typically
-comprise
-active
-unused
-dirty
-and
-untouched
-clean
-pages
-.
--
--
-disable
--
 munmap
 Disable
 virtual
@@ -2706,46 +2651,29 @@ these
 flags
 to
 the
-C
 compiler
 .
-Any
-flags
-set
-by
-the
-configure
-script
+You
+probably
+shouldn
+'
+t
+define
+this
+unless
+you
+know
+what
+you
 are
-prepended
-which
-means
-explicitly
-set
-flags
-generally
-take
-precedence
+doing
 .
-Take
-care
-when
-specifying
-flags
-such
-as
--
-Werror
-because
-configure
-tests
-may
-be
-affected
-in
-undesirable
-ways
+(
+Use
+EXTRA_CFLAGS
+instead
 .
+)
 EXTRA_CFLAGS
 =
 "
@@ -2756,14 +2684,6 @@ these
 flags
 to
 CFLAGS
-without
-passing
-them
-to
-the
-compiler
-during
-configuration
 .
 This
 makes
@@ -2792,6 +2712,41 @@ for
 the
 specified
 configuration
+.
+The
+configure
+script
+specifically
+checks
+whether
+an
+optimization
+flag
+(
+-
+O
+*
+)
+is
+specified
+in
+EXTRA_CFLAGS
+and
+refrains
+from
+specifying
+an
+optimization
+level
+if
+it
+finds
+that
+one
+has
+already
+been
+specified
 .
 CPPFLAGS
 =
