Bug 1340501 Fix sideloading notification with no promptable permissions r=florian
MozReview-Commit-ID: JduSAhhYWwR

UltraBlame original commit: 8f70ae357674bb83a2c73d2a918e6477f6673c5d

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -598,6 +598,39 @@ disabled
 .
 webextPerms
 .
+sideloadTextNoPerms
+=
+Another
+program
+on
+your
+computer
+installed
+an
+add
+-
+on
+that
+may
+affect
+your
+browser
+.
+Please
+choose
+to
+Enable
+or
+Cancel
+(
+to
+leave
+it
+disabled
+)
+.
+webextPerms
+.
 sideloadEnable
 .
 label
