Bug 1343477 - Search label should be a placeholder text in Settings of Site Data, r=Gijs
MozReview-Commit-ID: 6ljPyss39fS

UltraBlame original commit: 5d85f0b3dea8ed56b17cd8dca3a231ea055e19d2

--- a/browser/locales/en-US/chrome/browser/preferences/siteDataSettings.dtd
+++ b/browser/locales/en-US/chrome/browser/preferences/siteDataSettings.dtd
@@ -149,18 +149,15 @@ Storage
 <
 !
 ENTITY
-search
-.
-label
+searchPlaceHolder
 "
 Search
-:
 "
 >
 <
 !
 ENTITY
-search
+searchPlaceHolder
 .
 accesskey
 "
