--- a/devtools/client/locales/en-US/aboutdebugging.properties
+++ b/devtools/client/locales/en-US/aboutdebugging.properties
@@ -462,6 +462,35 @@ Extensions
 LOCALIZATION
 NOTE
 (
+temporaryExtensions
+)
+:
+#
+This
+string
+is
+displayed
+as
+a
+header
+above
+the
+list
+of
+temporarily
+loaded
+add
+-
+ons
+.
+temporaryExtensions
+=
+Temporary
+Extensions
+#
+LOCALIZATION
+NOTE
+(
 selectAddonFromFile2
 )
 :
