Bug 1344294 - Bump Debugger 3/3/2017. r=gtatum
UltraBlame original commit: 1f2df690050b0a553ae716f273d15fb2b6d45334

--- a/devtools/client/locales/en-US/debugger.properties
+++ b/devtools/client/locales/en-US/debugger.properties
@@ -1010,6 +1010,35 @@ sourceSearch
 .
 search
 .
+placeholder
+)
+:
+placeholder
+text
+in
+#
+the
+source
+search
+input
+bar
+sourceSearch
+.
+search
+.
+placeholder
+=
+Search
+in
+file
+#
+LOCALIZATION
+NOTE
+(
+sourceSearch
+.
+search
+.
 again
 .
 key
