Bug 1335016 - Add tooltip to identity popup expander button. r=florian,MarcoZ
MozReview-Commit-ID: 7ulEwzyYFsW

UltraBlame original commit: 295fe482610da9b771eed55cbf2136b3b0ecab33

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -4447,6 +4447,24 @@ tooltip
 Show
 site
 information
+identity
+.
+showDetails
+.
+tooltip
+=
+Show
+connection
+details
+identity
+.
+hideDetails
+.
+tooltip
+=
+Hide
+connection
+details
 trackingProtection
 .
 intro
