--- a/netwerk/locales/en-US/necko.properties
+++ b/netwerk/locales/en-US/necko.properties
@@ -143,6 +143,26 @@ up
 %
 1
 S
+12
+=
+Performing
+a
+TLS
+handshake
+to
+%
+1
+S
+13
+=
+The
+TLS
+handshake
+finished
+for
+%
+1
+S
 27
 =
 Beginning
