Bug 1337694 - Add language negotiation heuristics to LocaleService. r=jfkthame
MozReview-Commit-ID: 1WjJiKgyaWA

UltraBlame original commit: 120c713a857f9cf59ae923e470055fbfd0ddaa75

--- a/intl/locale/tests/unit/xpcshell.ini
+++ b/intl/locale/tests/unit/xpcshell.ini
@@ -122,11 +122,6 @@ test_pluralForm_makeGetter
 js
 ]
 [
-test_localeService
-.
-js
-]
-[
 test_osPreferences
 .
 js
@@ -144,3 +139,13 @@ android
 #
 bug
 1344596
+[
+test_localeService
+.
+js
+]
+[
+test_localeService_negotiateLanguages
+.
+js
+]
