Bug 1332061 Add warning for unsigned extensions r=florian
MozReview-Commit-ID: JAvjmh0IgBW

UltraBlame original commit: 782f34bf8bb5de282e6dfe8a83e26c81281c8c2f

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -363,6 +363,45 @@ Add
 %
 S
 ?
+webextPerms
+.
+unsignedWarning
+=
+Caution
+:
+This
+add
+-
+on
+is
+unverified
+.
+Malicious
+add
+-
+ons
+can
+steal
+your
+private
+information
+or
+compromise
+your
+computer
+.
+Only
+install
+this
+add
+-
+on
+if
+you
+trust
+the
+source
+.
 #
 LOCALIZATION
 NOTE
