Bug 1269277 - Add Manage Device button in Synced Tabs menu/sidebar. r=markh
MozReview-Commit-ID: 2BMgLeI0DNF

UltraBlame original commit: 805da5d5567f7cadc618abb082d89e2e010e68b6

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -4130,6 +4130,19 @@ Sync
 ENTITY
 appMenuRemoteTabs
 .
+managedevices
+.
+label
+"
+Manage
+Devices
+"
+>
+<
+!
+ENTITY
+appMenuRemoteTabs
+.
 sidebar
 .
 label
@@ -8792,6 +8805,35 @@ openAllInTabs
 accesskey
 "
 O
+"
+>
+<
+!
+ENTITY
+syncedTabs
+.
+context
+.
+managedevices
+.
+label
+"
+Manage
+Devices
+"
+>
+<
+!
+ENTITY
+syncedTabs
+.
+context
+.
+managedevices
+.
+accesskey
+"
+D
 "
 >
 <
