Bug 1315937 - Add basic custom menu to CustomTabsActivity r=sebastian
Besides custom-menu-items from 3-rd party apps, we designed a custom
menu which always has
  * buttons for Forward, Reload
  * One menu item for 'Open by Firefox'
  * a footer 'Powered by Firefox'

This patch adds a button as an anchor to standard menu. Once user click
it, to show a custom menu (GeckoPopupMenu) base on the anchor.

In current design, there is only one style for menu, regardless of Dark
or Light theme.

MozReview-Commit-ID: 5RMiGDlxLTU

UltraBlame original commit: 4391ccb1488ed55a3bbf0d47cab6d09330fc2608

--- a/mobile/android/base/locales/en-US/android_strings.dtd
+++ b/mobile/android/base/locales/en-US/android_strings.dtd
@@ -3118,6 +3118,65 @@ brandShortName
 Localization
 note
 (
+custom_tabs_menu_item_open_in
+)
+:
+The
+variable
+is
+replaced
+by
+the
+name
+of
+default
+browser
+from
+user
+'
+s
+preference
+such
+as
+"
+Open
+in
+Firefox
+"
+-
+-
+>
+<
+!
+ENTITY
+custom_tabs_menu_item_open_in
+"
+Open
+in
+&
+formatS
+;
+"
+>
+<
+!
+ENTITY
+custom_tabs_menu_footer
+"
+Powered
+by
+&
+brandShortName
+;
+"
+>
+<
+!
+-
+-
+Localization
+note
+(
 pref_activity_stream
 )
 :
