--- a/js/src/vtune/README
+++ b/js/src/vtune/README
@@ -50,6 +50,79 @@ legacy
 ittnotify
 .
 h
+Additionally
+the
+following
+changes
+should
+be
+propagated
+:
+-
+Some
+static
+functions
+should
+be
+exported
+for
+use
+in
+VTuneWrapper
+.
+cpp
+.
+-
+Per
+Bug
+1339190
+all
+instances
+of
+"
+__attribute__
+(
+(
+weak
+)
+)
+"
+must
+be
+removed
+or
+Ubuntu
+shell
+builds
+will
+randomly
+crash
+on
+startup
+.
+-
+With
+weak
+attributes
+removed
+DL_SYMBOLS
+and
+PTHREAD_SYMBOLS
+should
+be
+defined
+as
+"
+(
+1
+)
+"
+to
+avoid
+-
+Waddress
+warnings
+.
 If
 the
 license
