Bug 1346402 - Update pdf.js to version 1.7.359. r=bdahl
UltraBlame original commit: 8d46a3630226b686569a92c0b4681c65d3bd053a

--- a/browser/locales/en-US/pdfviewer/viewer.properties
+++ b/browser/locales/en-US/pdfviewer/viewer.properties
@@ -925,10 +925,18 @@ button
 title
 and
 messages
-find_label
+find_input
+.
+title
 =
 Find
-:
+find_input
+.
+placeholder
+=
+Find
+in
+document
 find_previous
 .
 title
