--- a/taskcluster/ci/l10n/kind.yml
+++ b/taskcluster/ci/l10n/kind.yml
@@ -53,7 +53,7 @@ MPL
 0
 /
 .
-implementation
+loader
 :
 taskgraph
 .
@@ -61,7 +61,7 @@ task
 .
 repacks
 :
-RepackTask
+load_tasks
 transforms
 :
 -
