--- a/devtools/client/locales/en-US/boxmodel.properties
+++ b/devtools/client/locales/en-US/boxmodel.properties
@@ -186,6 +186,44 @@ NOTE
 (
 boxmodel
 .
+position
+)
+This
+refers
+to
+the
+position
+in
+the
+box
+model
+and
+#
+might
+be
+displayed
+as
+a
+label
+or
+as
+a
+tooltip
+.
+boxmodel
+.
+position
+=
+position
+:
+%
+S
+#
+LOCALIZATION
+NOTE
+(
+boxmodel
+.
 margin
 )
 This
