--- a/toolkit/locales/en-US/chrome/global/aboutSupport.dtd
+++ b/toolkit/locales/en-US/chrome/global/aboutSupport.dtd
@@ -313,6 +313,49 @@ ID
 ENTITY
 aboutSupport
 .
+featuresTitle
+"
+&
+brandShortName
+;
+Features
+"
+>
+<
+!
+ENTITY
+aboutSupport
+.
+featureName
+"
+Name
+"
+>
+<
+!
+ENTITY
+aboutSupport
+.
+featureVersion
+"
+Version
+"
+>
+<
+!
+ENTITY
+aboutSupport
+.
+featureId
+"
+ID
+"
+>
+<
+!
+ENTITY
+aboutSupport
+.
 experimentsTitle
 "
 Experimental
