Bug 247996 - Add JS console warnings for every script element with an src that fails to load/execute it.  r=bzbarsky
MozReview-Commit-ID: 4fH6UFqUhfY

UltraBlame original commit: 89b1b0cc8b765569d97c3049363d26200360b312

--- a/dom/locales/en-US/chrome/dom/dom.properties
+++ b/dom/locales/en-US/chrome/dom/dom.properties
@@ -6826,3 +6826,143 @@ use
 of
 it
 .
+#
+LOCALIZATION
+NOTE
+:
+Do
+not
+translate
+"
+<
+script
+>
+"
+.
+ScriptSourceEmpty
+=
+%
+S
+attribute
+of
+<
+script
+>
+element
+is
+empty
+.
+#
+LOCALIZATION
+NOTE
+:
+Do
+not
+translate
+"
+<
+script
+>
+"
+.
+ScriptSourceInvalidUri
+=
+%
+S
+attribute
+of
+<
+script
+>
+element
+is
+not
+a
+valid
+URI
+:
+%
+S
+#
+LOCALIZATION
+NOTE
+:
+Do
+not
+translate
+"
+<
+script
+>
+"
+.
+ScriptSourceLoadFailed
+=
+Loading
+failed
+for
+the
+<
+script
+>
+with
+source
+%
+S
+.
+#
+LOCALIZATION
+NOTE
+:
+Do
+not
+translate
+"
+<
+script
+>
+"
+.
+ScriptSourceMalformed
+=
+<
+script
+>
+source
+URI
+is
+malformed
+:
+%
+S
+.
+#
+LOCALIZATION
+NOTE
+:
+Do
+not
+translate
+"
+<
+script
+>
+"
+.
+ScriptSourceNotAllowed
+=
+<
+script
+>
+source
+URI
+is
+not
+allowed
+in
+this
+document
+:
+%
+S
+.
