Bug 1341742 - Split secondary action for push notification permission prompt into "not now" and "never". r=johannh
MozReview-Commit-ID: DTkUuWabNjH

UltraBlame original commit: a60007195df53483b32675b27ea4710fea25c03b

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -4898,22 +4898,6 @@ this
 decision
 webNotifications
 .
-remember
-=
-Remember
-this
-decision
-webNotifications
-.
-rememberForSession
-=
-Remember
-decision
-for
-this
-session
-webNotifications
-.
 allow
 =
 Allow
@@ -4927,18 +4911,38 @@ accesskey
 A
 webNotifications
 .
-dontAllow
+notNow
 =
-Don
-t
-Allow
+Not
+Now
 webNotifications
 .
-dontAllow
+notNow
 .
 accesskey
 =
 n
+webNotifications
+.
+never
+=
+Never
+Allow
+webNotifications
+.
+neverForSession
+=
+Never
+For
+This
+Session
+webNotifications
+.
+never
+.
+accesskey
+=
+v
 webNotifications
 .
 receiveFromSite2
