Bug 1348122 - Share code between the customizable zoom control and the location bar's zoom indicator. r=Gijs
MozReview-Commit-ID: 7iRRr1gF9R5

UltraBlame original commit: c8f8b6cb5b7bce0f3c038a8d454488f3b5661796

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -3994,8 +3994,6 @@ Go
 LOCALIZATION
 NOTE
 (
-urlbar
--
 zoom
 -
 button
@@ -4008,6 +4006,7 @@ S
 is
 the
 current
+page
 zoom
 level
 #
@@ -4039,8 +4038,6 @@ be
 escaped
 )
 .
-urlbar
--
 zoom
 -
 button
