Bug 1348356 - Update in-tree libpng to version 1.6.29. r=jrmuizel
UltraBlame original commit: a6fe49ad11cbe5dfca3b172f2a71750de9e47b29

--- a/media/libpng/README
+++ b/media/libpng/README
@@ -6,10 +6,10 @@ version
 .
 6
 .
-28
+29
 -
-January
-5
+March
+16
 2017
 (
 shared
@@ -1933,6 +1933,16 @@ for
 the
 ARM
 platform
+powerpc
+=
+>
+Contains
+optimized
+code
+for
+the
+PowerPC
+platform
 contrib
 =
 >
@@ -1948,6 +1958,18 @@ for
 ARM
 -
 NEON
+platform
+powerpc
+-
+vsx
+=
+>
+Optimized
+code
+for
+POWERPC
+-
+VSX
 platform
 examples
 =
@@ -1979,21 +2001,23 @@ O
 '
 Reilly
 1999
-intel
-=
->
-Optimized
-code
-for
-INTEL
--
-SSE2
-platform
 libtests
 =
 >
 Test
 programs
+mips
+-
+msa
+=
+>
+Optimized
+code
+for
+MIPS
+-
+MSA
+platform
 pngminim
 =
 >
@@ -2038,6 +2062,24 @@ MSVC
 workspace
 for
 VisualPng
+intel
+=
+>
+Optimized
+code
+for
+INTEL
+-
+SSE2
+platform
+mips
+=
+>
+Optimized
+code
+for
+MIPS
+platform
 projects
 =
 >
