Bug 1349388, part 1 - Make AutoReferenceLimiter report long reference chains and reference loops to the console. r=longsonr
UltraBlame original commit: 2d439151440a1195efd5c770d4b9432a158ac0f1

--- a/dom/locales/en-US/chrome/dom/dom.properties
+++ b/dom/locales/en-US/chrome/dom/dom.properties
@@ -6830,6 +6830,90 @@ it
 LOCALIZATION
 NOTE
 :
+%
+S
+is
+the
+tag
+name
+of
+the
+element
+that
+starts
+the
+loop
+SVGReferenceLoopWarning
+=
+There
+is
+an
+SVG
+<
+%
+S
+>
+reference
+loop
+in
+this
+document
+which
+will
+prevent
+the
+document
+rendering
+correctly
+.
+#
+LOCALIZATION
+NOTE
+:
+%
+S
+is
+the
+tag
+name
+of
+the
+element
+that
+starts
+the
+chain
+SVGReferenceChainLengthExceededWarning
+=
+There
+is
+an
+SVG
+<
+%
+S
+>
+reference
+chain
+which
+is
+too
+long
+in
+this
+document
+which
+will
+prevent
+the
+document
+rendering
+correctly
+.
+#
+LOCALIZATION
+NOTE
+:
 Do
 not
 translate
