Bug 1347314 - Migrate calls to ChromeRegistry::GetSelectedLocale to use LocaleService::GetAppLocale. r=jfkthame,Pike
In cases, where the caller is looking for the locale to be used for JS Intl API,
we can now replace it with `undefined` which causes JS Intl API to use the default
locale which since bug 1346674 is resolved to the app locale.

This allows us to remove a lot of calls for the app locale.

The remaining ones are split between `AsBCP47` and `AsLangTag`.
Here, the `AsLangTag` is used, as described in the API docs, for cases where
the language string is used for localization purposes, such as language negotaition
matching to our language resources etc.
`AsBCP47` is used when the returned value is handed over to ICU API.

MozReview-Commit-ID: DzmFEUvMq3N

UltraBlame original commit: cc308a73ad05ab7b11872d8640f9711a99775094

--- a/browser/components/translation/translation-infobar.xml
+++ b/browser/components/translation/translation-infobar.xml
@@ -2856,35 +2856,12 @@ u01A1n
 let
 locale
 =
-Cc
-[
-"
-mozilla
+Services
 .
-org
-/
-chrome
-/
-chrome
--
-registry
-;
-1
-"
-]
+locale
 .
-getService
+getAppLocaleAsLangTag
 (
-Ci
-.
-nsIXULChromeRegistry
-)
-.
-getSelectedLocale
-(
-"
-browser
-"
 )
 ;
 if
