Backed out changeset cc308a73ad05 (bug 1347314) for eslint failure in test_device.html. r=backout
UltraBlame original commit: 48e124a57b7f296c7708bb852163844dce8c6363

--- a/browser/components/translation/translation-infobar.xml
+++ b/browser/components/translation/translation-infobar.xml
@@ -2856,12 +2856,35 @@ u01A1n
 let
 locale
 =
-Services
+Cc
+[
+"
+mozilla
 .
-locale
+org
+/
+chrome
+/
+chrome
+-
+registry
+;
+1
+"
+]
 .
-getAppLocaleAsLangTag
+getService
 (
+Ci
+.
+nsIXULChromeRegistry
+)
+.
+getSelectedLocale
+(
+"
+browser
+"
 )
 ;
 if
