Bug 1348264 - Expose keyboard shortcuts in tooltips for Stop, Reload and Reset Zoom buttons. r=mikedeboer
MozReview-Commit-ID: kTUc5pRdVw

UltraBlame original commit: 42cb4fec923b6cd6f0582a9839e13593ee81b4bd

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -3994,6 +3994,114 @@ Go
 LOCALIZATION
 NOTE
 (
+reloadButton
+.
+tooltip
+)
+:
+#
+%
+S
+is
+the
+keyboard
+shortcut
+for
+reloading
+the
+current
+page
+reloadButton
+.
+tooltip
+=
+Reload
+current
+page
+(
+%
+S
+)
+#
+LOCALIZATION
+NOTE
+(
+stopButton
+.
+tooltip
+)
+:
+#
+%
+S
+is
+the
+keyboard
+shortcut
+for
+stopping
+loading
+the
+page
+stopButton
+.
+tooltip
+=
+Stop
+loading
+this
+page
+(
+%
+S
+)
+#
+LOCALIZATION
+NOTE
+(
+urlbar
+-
+zoom
+-
+button
+.
+tooltip
+)
+:
+#
+%
+S
+is
+the
+keyboard
+shortcut
+for
+resetting
+the
+zoom
+level
+to
+100
+%
+urlbar
+-
+zoom
+-
+button
+.
+tooltip
+=
+Reset
+zoom
+level
+(
+%
+S
+)
+#
+LOCALIZATION
+NOTE
+(
 zoom
 -
 button
