Bug 943287 - Part 2. Use ICU version of nsICollation on all platform. r=hsivonen
nsICollation for macOS version uses ICU, so we should use it on all platform since nightly and aurora can use ICU on all platform.

MozReview-Commit-ID: 4nTzDCjOQXJ

UltraBlame original commit: 3ccff122964891dcffa75d6f957b9353aa60932e

--- a/intl/locale/tests/unit/xpcshell.ini
+++ b/intl/locale/tests/unit/xpcshell.ini
@@ -69,20 +69,10 @@ toolkit
 cocoa
 "
 [
-test_collation_mac_icu
+test_collation
 .
 js
 ]
-skip
--
-if
-=
-toolkit
-!
-=
-"
-cocoa
-"
 [
 test_bug1086527
 .
