Bug 1197420 Part 3 Initial browser.permissions api support r=kmag
With this patch, permissions are not actually applied,
but the permissions api is in place.

MozReview-Commit-ID: CTaXz5sa1xy

UltraBlame original commit: 7df6cc66a2eba65079c628c0ba5985a4e2188a75

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -818,6 +818,94 @@ updateAccept
 accessKey
 =
 U
+#
+LOCALIZATION
+NOTE
+(
+webextPerms
+.
+optionalPermsHheader
+)
+#
+%
+S
+is
+replace
+with
+the
+localized
+name
+of
+the
+extension
+requested
+new
+#
+permissions
+.
+#
+Note
+this
+string
+will
+be
+used
+as
+raw
+markup
+.
+Avoid
+characters
+like
+<
+>
+&
+webextPerms
+.
+optionalPermsHeader
+=
+%
+S
+requests
+additional
+permissions
+.
+webextPerms
+.
+optionalPermsListIntro
+=
+It
+wants
+to
+:
+webextPerms
+.
+optionalPermsAllow
+.
+label
+=
+Allow
+webextPerms
+.
+optionalPermsAllow
+.
+accessKey
+=
+A
+webextPerms
+.
+optionalPermsDeny
+.
+label
+=
+Deny
+webextPerms
+.
+optionalPermsDeny
+.
+accessKey
+=
+D
 webextPerms
 .
 description
