Bug 1328868 - Part 4 - Add a new switch offering to honour the system font size to Fennec's preferences. r=sebastian
MozReview-Commit-ID: HZqxl6T90mZ

UltraBlame original commit: 505a6c976a0bdfe4bf0bb06fd494812eafd90032

--- a/mobile/android/base/locales/en-US/android_strings.dtd
+++ b/mobile/android/base/locales/en-US/android_strings.dtd
@@ -4380,6 +4380,61 @@ Web
 >
 <
 !
+-
+-
+Localization
+note
+(
+pref_use_system_font_size
+pref_use_system_font_size_summary
+)
+:
+Font
+size
+here
+refers
+to
+the
+name
+of
+the
+corresponding
+Android
+system
+setting
+.
+-
+-
+>
+<
+!
+ENTITY
+pref_use_system_font_size
+"
+Use
+system
+font
+size
+"
+>
+<
+!
+ENTITY
+pref_use_system_font_size_summary
+"
+Scale
+web
+content
+according
+to
+the
+system
+font
+size
+"
+>
+<
+!
 ENTITY
 pref_media_autoplay_enabled
 "
