Bug 1348716 - Long click to copy URL in custom tabs r=sebastian
If user long click text area of ActionBar(URL or Title), then copy
current URL to clipboard.

MozReview-Commit-ID: EdVoMiX0Gt3

UltraBlame original commit: 35b016df8beba0283c33a85df83f841c20b1e72a

--- a/mobile/android/base/locales/en-US/android_strings.dtd
+++ b/mobile/android/base/locales/en-US/android_strings.dtd
@@ -3174,6 +3174,37 @@ brandShortName
 !
 -
 -
+Long
+-
+click
+title
+of
+CustomTabsActivity
+will
+copy
+URL
+to
+clipboard
+and
+display
+this
+hint
+-
+-
+>
+<
+!
+ENTITY
+custom_tabs_hint_url_copy
+"
+URL
+copied
+"
+>
+<
+!
+-
+-
 Localization
 note
 (
