Bug 1720961 - Fix Firefox Translations AddonID r=mixedpuppy
Fix Firefox Translations AddonID and uninstall the old reference

Differential Revision: https://phabricator.services.mozilla.com/D120121

UltraBlame original commit: 564a15816d4e03aee135b656a64df3d565291201

--- a/browser/extensions/translations/extension/manifest.json
+++ b/browser/extensions/translations/extension/manifest.json
@@ -621,18 +621,10 @@ id
 "
 firefox
 -
-infobar
--
-ui
--
-bergamot
--
-browser
--
-extension
-browser
+translations
+mozilla
 .
-mt
+org
 "
 "
 strict_min_version
