Bug 1722458 - [devtools] New performance panel can not be disabled from Settings panel in DevEdition r=julienw
Differential Revision: https://phabricator.services.mozilla.com/D120943

UltraBlame original commit: 90d511a865c96a54e4624bf4c068fd69e6ca880c

--- a/devtools/client/locales/en-US/toolbox.properties
+++ b/devtools/client/locales/en-US/toolbox.properties
@@ -2897,3 +2897,48 @@ the
 Browser
 Toolbox
 )
+#
+LOCALIZATION
+NOTE
+(
+options
+.
+enableNewPerformancePanel
+)
+:
+This
+is
+the
+text
+that
+appears
+in
+the
+#
+settings
+panel
+for
+the
+checkbox
+that
+enables
+the
+new
+performance
+panel
+.
+options
+.
+enableNewPerformancePanel
+=
+Enable
+new
+performance
+recorder
+(
+then
+re
+-
+open
+DevTools
+)
