Bug 1722467 - Update amazondotcn search url & params for MozillaOnline. r=Standard8
Differential Revision: https://phabricator.services.mozilla.com/D120944

UltraBlame original commit: 1d4e2d6942ec36179d8f5297c045cca8291a4452

--- a/browser/components/search/extensions/amazondotcn/_locales/mozillaonline/messages.json
+++ b/browser/components/search/extensions/amazondotcn/_locales/mozillaonline/messages.json
@@ -21,15 +21,7 @@ cn
 /
 gp
 /
-associates
-/
-link
--
-types
-/
-searchbox
-.
-html
+search
 "
 }
 "
@@ -42,31 +34,31 @@ message
 "
 :
 "
-engine
+ie
 =
-amazon_shopping
+UTF8
+&
+camp
+=
+536
+&
+creative
+=
+3200
+&
+index
+=
+aps
+&
+linkCode
+=
+ur2
 &
 tag
 =
 mozilla
 &
-create
-=
-2028
-&
-adid
-=
-1NZNRHJZ2Q87NTS7YW6N
-&
-campaign
-=
-408
-&
-mode
-=
-blended
-&
-keyword
+keywords
 =
 {
 searchTerms
