--- a/devtools/client/locales/en-US/webconsole.properties
+++ b/devtools/client/locales/en-US/webconsole.properties
@@ -4656,6 +4656,80 @@ NOTE
 (
 webconsole
 .
+error
+.
+commands
+.
+copyError
+)
+:
+#
+the
+error
+that
+is
+displayed
+when
+the
+"
+copy
+"
+command
+can
+'
+t
+stringify
+an
+object
+#
+"
+copy
+"
+should
+not
+be
+translated
+because
+is
+a
+function
+name
+.
+#
+Parameters
+:
+%
+S
+is
+the
+original
+error
+message
+webconsole
+.
+error
+.
+commands
+.
+copyError
+=
+copy
+command
+failed
+object
+can
+t
+be
+stringified
+:
+%
+S
+#
+LOCALIZATION
+NOTE
+(
+webconsole
+.
 message
 .
 commands
