Bug 1672317 - [l10nfilesource] part3: Introduce L10nFileSource backed by l10nregistry-rs. r=nika,emilio
Depends on D102102

Differential Revision: https://phabricator.services.mozilla.com/D103002

UltraBlame original commit: 1aaa22cf7c1301569c0e5ba11892d2734642f6c4

--- a/intl/l10n/rust/l10nregistry-ffi/cbindgen.toml
+++ b/intl/l10n/rust/l10nregistry-ffi/cbindgen.toml
@@ -92,7 +92,7 @@ py
 /
 #
 ifndef
-mozilla_intl_l10n_FluentBindings_h
+mozilla_intl_l10n_RegistryBindings_h
 #
 error
 "
@@ -105,7 +105,7 @@ file
 directly
 instead
 include
-FluentBindings
+RegistryBindings
 .
 h
 "
@@ -148,6 +148,15 @@ intl
 ffi
 "
 ]
+includes
+=
+[
+"
+nsIStreamLoader
+.
+h
+"
+]
 [
 parse
 ]
@@ -159,16 +168,11 @@ include
 [
 "
 fluent
-"
-"
-fluent
 -
 bundle
 "
 "
-intl
--
-memoizer
+l10nregistry
 "
 ]
 [
@@ -188,4 +192,14 @@ ThinVec
 =
 "
 nsTArray
+"
+"
+Promise
+"
+=
+"
+dom
+:
+:
+Promise
 "
