Bug 1660392 - [l10nregistry] part2: Add L10nRegistry WebIDL backed by l10nregistry-rs. r=nika,emilio
Depends on D105415

Differential Revision: https://phabricator.services.mozilla.com/D102096

UltraBlame original commit: ba23990f6fcd220265d39eb085c1b9d84b5836dd

--- a/intl/l10n/rust/fluent-ffi/Cargo.toml
+++ b/intl/l10n/rust/fluent-ffi/Cargo.toml
@@ -113,6 +113,38 @@ rust
 nsstring
 "
 }
+cstr
+=
+"
+0
+.
+2
+"
+xpcom
+=
+{
+path
+=
+"
+.
+.
+/
+.
+.
+/
+.
+.
+/
+.
+.
+/
+xpcom
+/
+rust
+/
+xpcom
+"
+}
 thin
 -
 vec
