--- a/intl/l10n/rust/l10nregistry-ffi/Cargo.toml
+++ b/intl/l10n/rust/l10nregistry-ffi/Cargo.toml
@@ -44,6 +44,13 @@ channel
 .
 3
 "
+futures
+=
+"
+0
+.
+3
+"
 libc
 =
 "
@@ -255,3 +262,28 @@ rust
 xpcom
 "
 }
+fluent
+-
+ffi
+=
+{
+path
+=
+"
+.
+.
+/
+fluent
+-
+ffi
+"
+}
+fluent
+-
+fallback
+=
+"
+0
+.
+5
+"
