--- a/testing/web-platform/meta/css/css-text/i18n/other-lang/css-text-line-break-de-pr-strict.html.ini
+++ b/testing/web-platform/meta/css/css-text/i18n/other-lang/css-text-line-break-de-pr-strict.html.ini
@@ -127,3 +127,40 @@ strict
 expected
 :
 FAIL
+[
+00B1
+PLUS
+-
+MINUS
+SIGN
+may
+appear
+at
+line
+start
+if
+de
+and
+strict
+]
+expected
+:
+FAIL
+[
+FF04
+FULLWIDTH
+DOLLAR
+SIGN
+may
+appear
+at
+line
+start
+if
+de
+and
+strict
+]
+expected
+:
+FAIL
