--- a/testing/web-platform/meta/css/css-text/i18n/unknown-lang/css-text-line-break-pr-strict.html.ini
+++ b/testing/web-platform/meta/css/css-text/i18n/unknown-lang/css-text-line-break-pr-strict.html.ini
@@ -113,3 +113,36 @@ strict
 expected
 :
 FAIL
+[
+00B1
+PLUS
+-
+MINUS
+SIGN
+may
+appear
+at
+line
+start
+if
+strict
+]
+expected
+:
+FAIL
+[
+FF04
+FULLWIDTH
+DOLLAR
+SIGN
+may
+appear
+at
+line
+start
+if
+strict
+]
+expected
+:
+FAIL
