Bug 1613705 - [localization] part3: Introduce passing Registry to Localization to replace BundleGenerator argument. r=emilio,nika
Depends on D104789

Differential Revision: https://phabricator.services.mozilla.com/D111178

UltraBlame original commit: 8d0c087b9896e6d672912221d904b4c10cf8eea0

--- a/intl/l10n/rust/localization-ffi/cbindgen.toml
+++ b/intl/l10n/rust/localization-ffi/cbindgen.toml
@@ -148,6 +148,19 @@ intl
 ffi
 "
 ]
+includes
+=
+[
+"
+mozilla
+/
+intl
+/
+RegistryBindings
+.
+h
+"
+]
 [
 parse
 ]
@@ -161,6 +174,11 @@ include
 fluent
 -
 fallback
+"
+"
+l10nregistry
+-
+ffi
 "
 ]
 [
