--- a/intl/l10n/rust/l10nregistry-ffi/Cargo.toml
+++ b/intl/l10n/rust/l10nregistry-ffi/Cargo.toml
@@ -136,7 +136,7 @@ github
 .
 com
 /
-zbraniecki
+mozilla
 /
 l10nregistry
 -
@@ -145,7 +145,7 @@ rs
 rev
 =
 "
-92d8fbfbbbdffa2047ce01a935a389eb11031f69
+55bf7f826d773303a67d8d7fdab099a04322d4fb
 "
 }
 fluent
