Bug 1723761 - Update outdated URL to new location. r=tnikkel
Differential Revision: https://phabricator.services.mozilla.com/D122042

UltraBlame original commit: 0b8a9e2b85a1950703a4bbbb5214a8e8be884d37

--- a/dom/locales/en-US/chrome/layout/layout_errors.properties
+++ b/dom/locales/en-US/chrome/layout/layout_errors.properties
@@ -220,7 +220,7 @@ having
 no
 effect
 .
-ScrollLinkedEffectFound2
+ScrollLinkedEffectFound3
 =
 This
 site
@@ -248,19 +248,23 @@ https
 :
 /
 /
-developer
+firefox
+-
+source
+-
+docs
 .
 mozilla
 .
 org
 /
-docs
+performance
 /
-Mozilla
-/
-Performance
-/
-ScrollLinkedEffects
+scroll
+-
+linked_effects
+.
+html
 for
 further
 details
