Bug 1720295 - Part 1: Report console message for disallow relaxing default referrer policy. r=ckerschb
This patch adds console message for disallowing relaxing default
referrer policy. The console message will only be reported if less
restricted policy has been set for cross-site requests. And it will use
different messages according to whether the restriction is enabled or
not.

Differential Revision: https://phabricator.services.mozilla.com/D121699

UltraBlame original commit: 6eba7ae998946dcb77e822388aeecfc4d2d9bd6f

--- a/dom/locales/en-US/chrome/security/security.properties
+++ b/dom/locales/en-US/chrome/security/security.properties
@@ -2389,6 +2389,135 @@ origin
 S
 .
 #
+LOCALIZATION
+NOTE
+:
+Do
+not
+translate
+"
+no
+-
+referrer
+-
+when
+-
+downgrade
+"
+"
+origin
+-
+when
+-
+cross
+-
+origin
+"
+and
+"
+unsafe
+-
+url
+"
+.
+%
+S
+is
+the
+URI
+of
+the
+loading
+channel
+.
+ReferrerPolicyDisallowRelaxingWarning
+=
+Referrer
+Policy
+:
+Less
+restricted
+policies
+including
+no
+-
+referrer
+-
+when
+-
+downgrade
+origin
+-
+when
+-
+cross
+-
+origin
+and
+unsafe
+-
+url
+will
+be
+ignored
+soon
+for
+the
+cross
+-
+site
+request
+:
+%
+S
+#
+LOCALIZATION
+NOTE
+:
+%
+1
+S
+is
+the
+ignored
+referrer
+policy
+%
+2
+S
+is
+the
+URI
+of
+the
+loading
+channel
+.
+ReferrerPolicyDisallowRelaxingMessage
+=
+Referrer
+Policy
+:
+Ignoring
+the
+less
+restricted
+referrer
+policy
+%
+1
+S
+for
+the
+cross
+-
+site
+request
+:
+%
+2
+S
+#
 X
 -
 Frame
