Bug 1724880 - Add a layout-debugger menu item that dumps CounterManager data.  r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D122210

UltraBlame original commit: c30515045012ceaeb834b58943a9915b5c7fa36b

--- a/layout/tools/layout-debug/ui/locale/en-US/layoutdebug.dtd
+++ b/layout/tools/layout-debug/ui/locale/en-US/layoutdebug.dtd
@@ -559,6 +559,31 @@ V
 ENTITY
 ldb
 .
+dumpCounterManager
+.
+label
+"
+CSS
+Counters
+"
+>
+<
+!
+ENTITY
+ldb
+.
+dumpCounterManager
+.
+accesskey
+"
+N
+"
+>
+<
+!
+ENTITY
+ldb
+.
 dumpStyleSheets
 .
 label
