Bug 1319410 - Make consecutive hyphens in comments a non-error r=smaug
Also allow `<!-->` at (IE conditional) comment end

See https://github.com/whatwg/html/pull/1356
See https://github.com/whatwg/html/pull/1456

Differential Revision: https://phabricator.services.mozilla.com/D82000

UltraBlame original commit: 5b33e3f54b589b5935d8d3d573cbff239f90f5be

--- a/dom/locales/en-US/chrome/layout/htmlparser.properties
+++ b/dom/locales/en-US/chrome/layout/htmlparser.properties
@@ -1390,14 +1390,26 @@ before
 doctype
 name
 .
-errHyphenHyphenBang
+errNestedComment
 =
--
--
+Saw
+<
 !
-found
-in
+-
+-
+within
+a
 comment
+.
+Probable
+cause
+:
+Nested
+comment
+(
+not
+allowed
+)
 .
 errNcrZero
 =
