Bug 1706425 - Simplify requestStorageAccess prompt. r=pbz,flod
Differential Revision: https://phabricator.services.mozilla.com/D121081

UltraBlame original commit: 4b33267c5cf5b9ef9f40e7cdc027c528af25acb0

--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -10533,30 +10533,28 @@ panel
 back
 =
 Back
-storageAccess
+storageAccess1
 .
 Allow
 .
 label
 =
 Allow
-Access
-storageAccess
+storageAccess1
 .
 Allow
 .
 accesskey
 =
 A
-storageAccess
+storageAccess1
 .
 DontAllow
 .
 label
 =
 Block
-Access
-storageAccess
+storageAccess1
 .
 DontAllow
 .
@@ -10567,10 +10565,10 @@ B
 LOCALIZATION
 NOTE
 (
-storageAccess3
+storageAccess4
 .
 message
-storageAccess
+storageAccess1
 .
 hintText
 )
@@ -10579,12 +10577,7 @@ hintText
 %
 1
 S
-and
-%
-3
-S
-are
-both
+is
 the
 name
 of
@@ -10643,60 +10636,45 @@ the
 address
 bar
 .
-storageAccess3
+storageAccess4
 .
 message
 =
-Will
-you
-allow
+Allow
 %
 1
 S
 to
 use
+its
 cookies
-and
-site
-data
 on
 %
 2
 S
 ?
-Allowing
-this
-may
-let
-%
-3
-S
-track
-what
-you
-do
-on
-this
-site
-.
-storageAccess
+storageAccess1
 .
 hintText
 =
 You
-should
+may
+want
+to
 block
 access
 if
-you
-don
-t
-trust
-or
-recognize
+it
+s
+not
+clear
+why
 %
 1
 S
+needs
+this
+data
 .
 confirmationHint
 .
