Backed out changeset 4d19ea5594d2 (bug 1635548) for assertion failures on ErrorResult.h. CLOSED TREE
UltraBlame original commit: 764f34e4fc7fc29cc3b7ff607007adb5216d87e4

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -1098,6 +1098,16 @@ Search
 <
 !
 ENTITY
+openLinkCmdInTab
+.
+accesskey
+"
+T
+"
+>
+<
+!
+ENTITY
 fullZoom
 .
 label
@@ -1205,6 +1215,27 @@ editPopupSettings
 accesskey
 "
 E
+"
+>
+<
+!
+ENTITY
+spellAddDictionaries
+.
+label
+"
+Add
+Dictionaries
+"
+>
+<
+!
+ENTITY
+spellAddDictionaries
+.
+accesskey
+"
+A
 "
 >
 <
