--- a/toolkit/locales/en-US/chrome/global/textcontext.dtd
+++ b/toolkit/locales/en-US/chrome/global/textcontext.dtd
@@ -62,6 +62,106 @@ MPL
 <
 !
 ENTITY
+spellAddToDictionary
+.
+label
+"
+Add
+to
+Dictionary
+"
+>
+<
+!
+ENTITY
+spellAddToDictionary
+.
+accesskey
+"
+o
+"
+>
+<
+!
+ENTITY
+spellUndoAddToDictionary
+.
+label
+"
+Undo
+Add
+To
+Dictionary
+"
+>
+<
+!
+ENTITY
+spellUndoAddToDictionary
+.
+accesskey
+"
+n
+"
+>
+<
+!
+ENTITY
+spellCheckToggle
+.
+label
+"
+Check
+Spelling
+"
+>
+<
+!
+ENTITY
+spellCheckToggle
+.
+accesskey
+"
+g
+"
+>
+<
+!
+ENTITY
+spellNoSuggestions
+.
+label
+"
+(
+No
+Spelling
+Suggestions
+)
+"
+>
+<
+!
+ENTITY
+spellDictionaries
+.
+label
+"
+Languages
+"
+>
+<
+!
+ENTITY
+spellDictionaries
+.
+accesskey
+"
+l
+"
+>
+<
+!
+ENTITY
 searchTextBox
 .
 clear
