Backed out changeset dc6b9ca8f3fa (bug 1727491) for causing mochitest failures on test_bug631751be.html. CLOSED TREE
UltraBlame original commit: 4a8481d5aaef1d2a919a9c05dd94789400fc4458

--- a/dom/locales/en-US/chrome/layout/htmlparser.properties
+++ b/dom/locales/en-US/chrome/layout/htmlparser.properties
@@ -438,6 +438,54 @@ declaration
 was
 ignored
 .
+EncBomlessUtf16
+=
+Detected
+UTF
+-
+16
+-
+encoded
+Basic
+Latin
+-
+only
+text
+without
+a
+byte
+order
+mark
+and
+without
+a
+transfer
+protocol
+-
+level
+declaration
+.
+Encoding
+this
+content
+in
+UTF
+-
+16
+is
+inefficient
+and
+the
+character
+encoding
+should
+have
+been
+declared
+in
+any
+case
+.
 EncMetaUtf16
 =
 A
