Bug 1994745 - Clean up unused completed onboarding experiment strings r=android-reviewers,android-l10n-reviewers,gmalekpour,delphine
Differential Revision: https://phabricator.services.mozilla.com/D268895

UltraBlame original commit: a0003984e2942d7d2e39efd6dbff88d491e01258

--- a/mobile/android/fenix/app/src/main/res/values/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/strings.xml
@@ -4713,6 +4713,20 @@ name
 "
 browser_main_menu_content_description_help_button
 "
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+146
+"
 >
 Help
 <
@@ -4749,6 +4763,20 @@ name
 =
 "
 browser_main_menu_content_description_settings_button
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+146
 "
 >
 Settings
@@ -6812,6 +6840,13 @@ ignore
 BrandUsage
 UnusedResources
 "
+moz
+:
+removedIn
+=
+"
+146
+"
 >
 Find
 out
@@ -6856,6 +6891,13 @@ ignore
 =
 "
 UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+146
 "
 >
 Safe
@@ -6950,6 +6992,13 @@ ignore
 "
 UnusedResources
 "
+moz
+:
+removedIn
+=
+"
+146
+"
 >
 More
 than
@@ -7007,6 +7056,13 @@ ignore
 =
 "
 UnusedResources
+"
+moz
+:
+removedIn
+=
+"
+146
 "
 >
 Known
@@ -13693,6 +13749,59 @@ preferences_tab_strip
 Tab
 bar
 display
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+gestures
+based
+actions
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_toolbar_shortcut
+"
+>
+Toolbar
+shortcut
+<
+/
+string
+>
+<
+!
+-
+-
+Preference
+for
+gestures
+based
+actions
+-
+-
+>
+<
+string
+name
+=
+"
+preferences_toolbar_select_shortcut
+"
+>
+Select
+a
+shortcut
 <
 /
 string
